<resources>
    <string name="app_name">招考招聘</string>
    <string name="system_title">设置</string>
    <string name="home_title">人事招考</string>
    <string name="recruit_title">公司招聘</string>
    <string name="collect_title">个人收藏</string>
    <string name="message_title">内容详情</string>
    <string name="login_title">登陆</string>
    <string name="register_title">注册</string>

    <string name="recruit_gzzp">贵州招聘</string>
    <string name="recruit_gyzp">贵阳招聘</string>
    <string name="recruit_bjzp">毕节招聘</string>
    <string name="recruit_zyzp">遵义招聘</string>
    <string name="recruit_trzp">铜仁招聘</string>
    <string name="recruit_qdnzp">黔东南招聘</string>
    <string name="recruit_qxnzp">黔西南招聘</string>
    <string name="recruit_qnzp">黔南招聘</string>
    <string name="recruit_aszp">安顺招聘</string>
    <string name="recruit_lpszp">六盘水招聘</string>

    <string name="support">支持作者</string>
    <string name="wipe_cache">清除缓存</string>
    <string name="feedback">反馈</string>
    <string name="lang">语言</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="version">版本</string>
    <string name="version_value">v1.0</string>
    <string name="author">Arron</string>
    <string name="copyright">©2017 helloarron.com</string>

    <string name="current_version">当前版本</string>
    <string name="next_version_plan">版本特性：</string>
    <string name="next_version_plan_one">1.支持分享到微信好友、朋友圈、微信收藏；</string>
    <string name="next_version_plan_two">2.支持关键词检索、长按收藏等。</string>

    <string name="warning">警告</string>
    <string name="error">错误</string>
    <string name="give_up_the_editor">放弃编辑？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="loading">加载中...</string>

    <string name="click_to_exit">再按一次退出程序</string>
    <string name="some_errors">发生了某些错误</string>

    <string name="login_name_hint">邮箱</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_name">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_name_des">请输入邮箱</string>
    <string name="editinfo_pwd_des">密码为6-15位字母和数字</string>
    <string name="logout">退出当前用户</string>
    <string name="current_user">当前用户</string>
    <string name="exit">退出</string>
    <string name="exit_desc">退出当前用户？</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请设置一个昵称</string>
    <string name="nickname_to_long">您设置的昵称过长</string>
    <string name="register_success">注册成功</string>
    <string name="need_login">请登录</string>

    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="paste">粘贴</string>
    <string name="paste_success">粘贴成功</string>
    <string name="jpg">JPG</string>
    <string name="png">PNG</string>

    <string name="no_sdcard">SD卡未准备好！</string>
    <string name="failed_create_folder">创建目录失败</string>
    <string name="save_success">保存成功</string>

    <string name="support_tip">如果您喜欢该工具，请通过下方的方式支持作者吧，O(∩_∩)O谢谢！</string>
    <string name="support_way_title">支持方式</string>
    <string name="pay_tip">长按下方图片保存，使用微信扫码</string>
    <string name="save">保存</string>
    <string name="pay_alert_content">作者很辛苦，支持一个 (*^__^*)</string>
    <string name="support_sure">助力作者</string>
    <string name="support_cancel">有待改进</string>

    <string name="exit_des">再按一次退出程序</string>

    <string name="collect">收藏</string>
    <string name="collect_alert_content">收藏该信息，方便查找</string>
    <string name="cancel_collect_title">取消收藏</string>
    <string name="cancel_collect_tip">取消之后将不再展示，确认取消？</string>
    <string name="cancel_collect">取消成功</string>
    <string name="add_collect">收藏成功</string>
    <string name="collection_tip">首页长按信息可收藏</string>

    <string name="search_hit">输入关键词</string>

    <string name="wipe_cache_sure">清除缓存将会清空收藏数据，是否清除？</string>
    <string name="wipe_success">缓存清除成功</string>

    <string name="published_at">发布时间</string>
    <string name="type">类型</string>

    <string name="colon_symbol">：</string>

    <string name="qq">QQ好友</string>
    <string name="moments">微信朋友圈</string>
    <string name="collection">微信收藏</string>
    <string name="wechat">微信好友</string>
    <string name="qzone">QQ空间</string>
    <string name="sine">新浪微博</string>
    <string name="open_browser">浏览器打开</string>

    <string name="wait_for_updating">功能开发中，敬请期待</string>
</resources>
