<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.helloarron.gzzp.activity.main.LoginActivity">

    <include layout="@layout/include_main_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_l">

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/login_name" />

            <EditText
                android:id="@+id/et_account"
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/login_name_hint"
                android:maxLines="1"
                android:paddingRight="@dimen/margin_padding_m"
                android:singleLine="true" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_l">

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/login_pwd" />

            <EditText
                android:id="@+id/et_password"
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:paddingRight="@dimen/margin_padding_m" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/fillet_10_green_bg"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/register"
            style="@style/text_66_black_medium"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_padding_xxl"
            android:paddingLeft="@dimen/margin_padding_l"
            android:paddingRight="@dimen/margin_padding_l"
            android:paddingTop="@dimen/margin_padding_xxl"
            android:text="@string/register_title" />
    </LinearLayout>
</LinearLayout>
